[package]
name = "unicorn-rs"
version = "0.1.0"
authors = ["morn"]
edition = "2018"
links = "unicorn"
build = "build.rs"
description = "Rust bindings for the unicorn emulator"
license = "GPL-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.99"
bitflags = "1.3.1"

[build-dependencies]
cmake = "0.1.45"

